--- a/app/views/layouts/shared/on_taraf/_header.html.erb
+++ b/app/views/layouts/shared/on_taraf/_header.html.erb
@@ -3,7 +3,7 @@
     <!-- ################################################################################################ -->
     <div  style="width:100%"  id="logo" class="fl_left">
       
-    <center> <h1 style="color:white;font-family:Times New Roman;" ><a  href="/on_taraf/anasayfa/index.html">Yemek tarifleri</a></h1></center>
+    <center> <h1 style="color:white;font-family:Times New Roman;" ><a  href="/on_taraf/anasayfa/index.html">Fotoğraf Makineleri</a></h1></center>
       
     </div>
  
